//file:noinspection UnnecessaryQualifiedReference
plugins {
    id("java")
    id("application")
    id("io.ebean") version "17.0.0"
    id("org.openapi.generator") version "7.14.0"
    id("io.spring.dependency-management") version "1.1.7"

    id("jacoco")
    id("com.diffplug.spotless") version "7.2.1"
    id("se.solrike.sonarlint") version "2.2.0"

    id("org.hidetake.ssh") version "2.12.0"
    id("com.google.cloud.tools.jib") version "3.4.5"
    id("com.github.node-gradle.node") version "7.1.0"
    id("net.researchgate.release") version "3.1.0"
}

release {
    tagTemplate = 'V${version}'
}

allprojects {

    apply plugin: "java"
    apply plugin: "jacoco"
    apply plugin: "project-report"
    apply plugin: "com.diffplug.spotless"
    apply plugin: "se.solrike.sonarlint"
    apply plugin: "org.hidetake.ssh"
    apply plugin: "com.github.node-gradle.node"
    apply plugin: "io.spring.dependency-management"

    group = "cool.houge.mahu"

    java {
        sourceCompatibility = JavaVersion.VERSION_24
        targetCompatibility = JavaVersion.VERSION_24
    }

    jar {
        manifest {
            attributes("Build-Time": "${java.time.OffsetDateTime.now()}")
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.compilerArgs += [
            "-parameters",
        ]
        options.sourcepath = sourceSets.main.resources.getSourceDirectories()
    }

    test {
        useJUnitPlatform()
    }

    jacoco {
        toolVersion = "0.8.13"
    }

    jacocoTestReport {
        dependsOn test
        reports {
            html.required = true
            html.outputLocation = layout.buildDirectory.dir("reports/jacoco")
        }
    }

    spotless {
        java {
            palantirJavaFormat()
            formatAnnotations()
        }
    }

    sonarlint {
        reports {
            sarif.enabled = true
            html.enabled = true
        }
    }

    configurations {
        configureEach {
            exclude group: "io.avaje", module: "avaje-config"
            exclude group: "io.ebean", module: "ebean-migration"
            exclude group: "io.avaje", module: "avaje-validator-inject-plugin"
            exclude group: "io.avaje", module: "avaje-validator-http-plugin"
        }
    }

    node {
        download = true
        version = "22.3.0"
        distBaseUrl = "https://mirrors.huaweicloud.com/nodejs/"
        workDir = rootProject.layout.projectDirectory.dir(".gradle/")
    }

    // 部署服务器配置
    remotes {
        dev01 {
            host = "mahu.houge.cool"
            user = "root"
            identity = file("${System.getProperty("user.home")}/.ssh/id_rsa")
        }
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:4.0.0-M1")
            mavenBom("io.helidon:helidon-bom:4.3.0-M2")
            mavenBom("io.ebean:ebean-bom:17.0.1")
            mavenBom("org.testcontainers:testcontainers-bom:1.21.3")
        }
        dependencies {
            dependency("io.helidon.bundles:helidon-bundles-apt:4.3.0-M2")
            dependency("org.checkerframework:checker-qual:3.49.5")
            dependency("com.google.errorprone:error_prone_annotations:2.41.0")
            dependency("com.google.guava:guava:33.4.8-jre")
            dependency("org.apache.commons:commons-collections4:4.5.0")
            dependency("org.apache.commons:commons-text:1.14.0")
            dependency("org.apache.commons:commons-compress:1.28.0")
            dependency("org.opensearch.client:opensearch-java:3.2.0")

            dependency("io.avaje:avaje-validator-constraints:2.12")
            dependency("io.avaje:avaje-validator:2.12")
            dependency("io.avaje:avaje-validator-generator:2.12")
            dependency("org.mapstruct:mapstruct:1.6.3")
            dependency("org.mapstruct:mapstruct-processor:1.6.3")
            dependency("org.instancio:instancio-junit:5.4.1")
            dependency("io.minio:minio:8.5.17")
            dependency("com.password4j:password4j:1.8.1")
            dependency("io.hypersistence:hypersistence-tsid:2.1.4")
            dependency("com.github.RoaringBitmap.RoaringBitmap:roaringbitmap:1.5.2")
            dependency("io.github.nstdio:rsql-parser:2.3.4")
            dependency("com.github.kagkarlsson:db-scheduler:16.0.0")

            // 微信第三方 SDK
            dependency("com.github.binarywang:weixin-java-miniapp:4.7.7-20250730.233020")
            dependency("com.github.binarywang:weixin-java-pay:4.7.7-20250730.233020")
        }
        // resolutionStrategy {
        //     cacheChangingModulesFor 0, 'seconds'
        // }
    }

    dependencies {
        sonarlintPlugins("org.sonarsource.java:sonar-java-plugin:7.35.0.36271")

        annotationProcessor("org.projectlombok:lombok")
        annotationProcessor("org.mapstruct:mapstruct-processor")
        annotationProcessor("io.avaje:avaje-validator-generator")
        compileOnly("org.projectlombok:lombok")
        compileOnly("org.mapstruct:mapstruct")

        testAnnotationProcessor("org.projectlombok:lombok")
        testCompileOnly("org.projectlombok:lombok")
        testImplementation("org.apache.logging.log4j:log4j-core")
        testImplementation("org.apache.logging.log4j:log4j-slf4j2-impl")

        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
        testRuntimeOnly("org.junit.vintage:junit-vintage-engine")
        testImplementation("org.junit.jupiter:junit-jupiter-params")
        testImplementation("org.assertj:assertj-core")
        testImplementation("org.awaitility:awaitility")
        testImplementation("org.mockito:mockito-junit-jupiter")
        testImplementation("org.instancio:instancio-junit")
    }

    repositories {
        maven {url "https://repo.huaweicloud.com/repository/maven"}
        maven {url "https://jitpack.io"}
        mavenLocal()
        mavenCentral()
    }
}
